--- a/app/src/main/res/layout/extra_data_popup.xml
+++ b/app/src/main/res/layout/extra_data_popup.xml
@@ -27,8 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.244"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_popupType"
-        app:layout_constraintVertical_bias="0.042" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_popupType2"
+        app:layout_constraintVertical_bias="0.019" />
 
     <TextView
         android:id="@+id/tv_popupDescription"
@@ -37,10 +37,10 @@
         android:text="@string/extraPopupDesc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.243"
+        app:layout_constraintHorizontal_bias="0.244"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_popupAmount"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.045" />
 
     <TextView
         android:id="@+id/tv_popupType2"
@@ -61,7 +61,7 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toEndOf="@+id/tv_popupAmount"
         app:layout_constraintTop_toBottomOf="@+id/tv_popupType2"
         app:layout_constraintVertical_bias="0.019" />
@@ -73,10 +73,10 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.412"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toEndOf="@+id/tv_popupDescription"
         app:layout_constraintTop_toBottomOf="@+id/tv_popupAmount2"
-        app:layout_constraintVertical_bias="0.023" />
+        app:layout_constraintVertical_bias="0.048" />
 
     <Button
         android:id="@+id/btn_popupClose"
